| Summary: | ASTERISK-25165: Testsuite - Sorcery memory cache leaks | ||
| Reporter: | Corey Farrell (coreyfarrell) | Labels: | |
| Date Opened: | 2015-06-16 08:06:46 | Date Closed: | 2015-06-30 07:34:09 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Core/Sorcery Tests/testsuite |
| Versions: | SVN 13.6.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) sorcery-memory_cache_expire-refs.txt | |
| Description: | Some new tests for sorcery memory cache have been leaking since created.
||Leaked objects||Test|| |209|tests/sorcery/memory_cache_stale_object| |209|tests/sorcery/memory_cache_stale| |227|tests/sorcery/memory_cache_expire_object| |227|tests/sorcery/memory_cache_expire| I have not investigated to determine if this is caused by the testsuite or Asterisk. | ||
| Comments: | |||